--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,7 +2,7 @@
   --text-dark-color: #242424;
   --light-color: #fff;
   --primary-color: #eae9eb;
-  --code : #e0dfdf;
+  --code : #170020;
   --box-shadow: 0 4px 6px rgba( 0, 0, 0, 0.1);
   --danger: #a10a0a;
   --blue: #4242f3;
